# QA_Andriadis_test_task

./: .gitignore  README.md  pyproject.toml
src/api/: pet_api.py
src/config/: settings.py
src/contracts/: validators.py
src/http/: client.py  response.py
src/models/: api_response.py  base.py  errors.py  pet.py
src/ui/: base_page.py
src/ui/pages/: careers_page.py  home_page.py  qa_jobs_page.py
src/ui/utils/: browser_factory.py  logger.py  screenshot.py
src/utils/: data_factory.py
tests/: conftest.py
tests/api/: test_pet_contracts.py  test_pet_crud_negative.py  test_pet_crud_positive.py
tests/ui/: conftest.py  test_careers_navigation.py  test_qa_jobs.py
